--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "vite": "^5.4.19"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
